Added in case study cards

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -13,6 +13,7 @@ $pd-black-alpha: rgba($black, 0.4);
 $headings-font-weight: 400;
 
 // font sizes
+$pd-font-ex-ex-sm: 0.7rem;
 $pd-font-ex-sm: 0.8rem;
 $pd-font-sm: 1rem;
 $pd-font-md: 1.4rem;
