--- a/bootstrap_theme/vivato/utils.scss
+++ b/bootstrap_theme/vivato/utils.scss
@@ -599,7 +599,7 @@
 
 .pd-watermark {
     position: absolute;
-    bottom: -8px;
+    bottom: -4px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -616,7 +616,7 @@
 // *******************
 .pd-watermark-sm {
     position: absolute;
-    bottom: -1px;
+    bottom: 0px;
     right: 20px;
     z-index: 0;
 
@@ -632,5 +632,41 @@
 
     @media screen and (max-width: 767px) {
         display: none;
+    }
+}
+
+
+
+.pd-brand-v {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: $pd-border-radius-lg;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    img, svg {
+        position: absolute;
+        transform: translateY(-50%);
+        height: auto;
+        
+        @media screen and (max-width: 991px) {
+            width: 600px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        
+        @media(min-width: 992px) {
+            top: 50%;
+            width: 500px;
+            right: 40px;
+        }
+
+        .svg-fill {
+            fill: rgba($white, 0.1);
+        }
+
     }
 }
